--- a/index.html
+++ b/index.html
@@ -1639,7 +1639,7 @@
             </div>
         </section>
         <section>
-            <button>Check Out More Projects</button>
+            <button onclick="document.location='project.html'">Check Out More Projects</button>
         </section>
     </section>
 
