--- a/project.html
+++ b/project.html
@@ -6,14 +6,22 @@
     <meta content="black" name="theme-color">
     <meta content="width=device-width initial-scale=1" name="viewport">
 
-    <link rel="stylesheet" href="assets/css/fonts/css/all.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="assets/css/fonts/css/all.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com" rel="preconnect">
+    <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@300&family=Oswald:wght@200&display=swap"
           rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Arimo&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Artifika&display=swap" rel="stylesheet">
     <style>
+        html {
+            scroll-behavior: smooth;
+        }
+
+        ::-webkit-scrollbar {
+            width: 0px;
+        }
+
         body {
             margin: 0;
             width: 100vw;
@@ -26,36 +34,102 @@
             width: 100vw;
         }
 
+        main > section:nth-child(2) > div > aside > a > img {
+            height: 315px;
+            width: 500px;
+            border-radius: 20px;
+            background-size: cover;
+        }
+
+        main > section:nth-child(2) {
+            display: flex;
+            flex-direction: column;
+        }
+
+        main > section:nth-child(2) > div {
+            position: relative;
+            top: 40px;
+            margin-left: 70px;
+            height: 450px;
+            margin-right: 35px;
+        }
+
+        main > section:nth-child(2) > div > aside:nth-child(1) {
+            position: absolute;
+            left: 0;
+        }
+
+        main > section:nth-child(2) > div > aside:nth-child(2) {
+            position: absolute;
+            left: 550px;
+            padding-left: 20px;
+            padding-top: 20px;
+        }
+
+        main > section:nth-child(2) > div > aside > a > img {
+            height: 315px;
+            width: 500px;
+            border-radius: 20px;
+            background-size: cover;
+        }
+
+        main > section:nth-child(2) > div > aside:nth-child(2) > h1 > a {
+            position: relative;
+            font-size: 30px;
+            color: white;
+            font-family: 'Oswald', sans-serif;
+            margin-bottom: 30px;
+            margin-left: 25px;
+            margin-top: 40px;
+            text-decoration: none;
+        }
+
+        main > section:nth-child(2) > div > aside:nth-child(2) > p {
+            position: relative;
+            font-size: 17px;
+            font-family: 'Arimo', sans-serif;
+            color: white;
+            margin-left: 25px;
+            margin-bottom: 90px;
+            line-height: 1.6;
+        }
+
+
         /*FOOTER*/
         footer {
             background-color: #1A1A1A;
             position: absolute;
             width: 100%;
         }
-        footer > h1{
+
+        footer > h1 {
             color: white;
             margin-left: 25px;
             margin-bottom: 0;
             font-size: 40px;
         }
-        footer > h3{
+
+        footer > h3 {
             color: white;
             margin-left: 25px;
             margin-top: -3px;
             font-size: 10px;
             font-family: Arimo;
         }
-        footer > div{
+
+        footer > div {
             color: white;
             margin-left: 25px;
             margin-top: 20px;
         }
-        footer > div > a > i{
+
+        footer > div > a > i {
             color: white;
             width: 30px;
             height: 30px;
         }
-        footer > div > a > i:hover{
+
+        footer > div > a > i:hover {
             color: red;
         }
     </style>
@@ -69,12 +143,155 @@
         </div>
         <hr>
     </section>
-
     <section>
+        <div>
+            <aside>
+                <a href="#" target="_blank"><img alt="Logo" src="assets/portfolio/project example img.png"></a>
+            </aside>
+            <aside>
+                <h1><a href="#" target="_blank">Car <span style="color: red">Animation</span></a></h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur fuga ipsa iusto nam odio
+                    optio quisquam repellat saepe voluptatem. Dignissimos facilis impedit laboriosam nobis qui quia
+                    repellendus tenetur totam, velit?</p>
+            </aside>
+        </div>
 
+        <div>
+            <aside>
+                <a href="#" target="_blank"><img alt="Logo" src="assets/portfolio/project example img.png"></a>
+            </aside>
+            <aside>
+                <h1><a href="#" target="_blank">Car <span style="color: red">Animation</span></a></h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur fuga ipsa iusto nam odio
+                    optio quisquam repellat saepe voluptatem. Dignissimos facilis impedit laboriosam nobis qui quia
+                    repellendus tenetur totam, velit?</p>
+            </aside>
+        </div>
+
+        <div>
+            <aside>
+                <a href="#" target="_blank"><img alt="Logo" src="assets/portfolio/project example img.png"></a>
+            </aside>
+            <aside>
+                <h1><a href="#" target="_blank">Car <span style="color: red">Animation</span></a></h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur fuga ipsa iusto nam odio
+                    optio quisquam repellat saepe voluptatem. Dignissimos facilis impedit laboriosam nobis qui quia
+                    repellendus tenetur totam, velit?</p>
+            </aside>
+        </div>
+
+        <div>
+            <aside>
+                <a href="#" target="_blank"><img alt="Logo" src="assets/portfolio/project example img.png"></a>
+            </aside>
+            <aside>
+                <h1><a href="#" target="_blank">Car <span style="color: red">Animation</span></a></h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur fuga ipsa iusto nam odio
+                    optio quisquam repellat saepe voluptatem. Dignissimos facilis impedit laboriosam nobis qui quia
+                    repellendus tenetur totam, velit?</p>
+            </aside>
+        </div>
+
+        <div>
+            <aside>
+                <a href="#" target="_blank"><img alt="Logo" src="assets/portfolio/project example img.png"></a>
+            </aside>
+            <aside>
+                <h1><a href="#" target="_blank">Car <span style="color: red">Animation</span></a></h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur fuga ipsa iusto nam odio
+                    optio quisquam repellat saepe voluptatem. Dignissimos facilis impedit laboriosam nobis qui quia
+                    repellendus tenetur totam, velit?</p>
+            </aside>
+        </div>
+
+        <div>
+            <aside>
+                <a href="#" target="_blank"><img alt="Logo" src="assets/portfolio/project example img.png"></a>
+            </aside>
+            <aside>
+                <h1><a href="#" target="_blank">Car <span style="color: red">Animation</span></a></h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur fuga ipsa iusto nam odio
+                    optio quisquam repellat saepe voluptatem. Dignissimos facilis impedit laboriosam nobis qui quia
+                    repellendus tenetur totam, velit?</p>
+            </aside>
+        </div>
+
+        <div>
+            <aside>
+                <a href="#" target="_blank"><img alt="Logo" src="assets/portfolio/project example img.png"></a>
+            </aside>
+            <aside>
+                <h1><a href="#" target="_blank">Car <span style="color: red">Animation</span></a></h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur fuga ipsa iusto nam odio
+                    optio quisquam repellat saepe voluptatem. Dignissimos facilis impedit laboriosam nobis qui quia
+                    repellendus tenetur totam, velit?</p>
+            </aside>
+        </div>
+
+        <div>
+            <aside>
+                <a href="#" target="_blank"><img alt="Logo" src="assets/portfolio/project example img.png"></a>
+            </aside>
+            <aside>
+                <h1><a href="#" target="_blank">Car <span style="color: red">Animation</span></a></h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur fuga ipsa iusto nam odio
+                    optio quisquam repellat saepe voluptatem. Dignissimos facilis impedit laboriosam nobis qui quia
+                    repellendus tenetur totam, velit?</p>
+            </aside>
+        </div>
+
+        <div>
+            <aside>
+                <a href="#" target="_blank"><img alt="Logo" src="assets/portfolio/project example img.png"></a>
+            </aside>
+            <aside>
+                <h1><a href="#" target="_blank">Car <span style="color: red">Animation</span></a></h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur fuga ipsa iusto nam odio
+                    optio quisquam repellat saepe voluptatem. Dignissimos facilis impedit laboriosam nobis qui quia
+                    repellendus tenetur totam, velit?</p>
+            </aside>
+        </div>
+
+        <div>
+            <aside>
+                <a href="#" target="_blank"><img alt="Logo" src="assets/portfolio/project example img.png"></a>
+            </aside>
+            <aside>
+                <h1><a href="#" target="_blank">Car <span style="color: red">Animation</span></a></h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur fuga ipsa iusto nam odio
+                    optio quisquam repellat saepe voluptatem. Dignissimos facilis impedit laboriosam nobis qui quia
+                    repellendus tenetur totam, velit?</p>
+            </aside>
+        </div>
+
+        <div>
+            <aside>
+                <a href="#" target="_blank"><img alt="Logo" src="assets/portfolio/project example img.png"></a>
+            </aside>
+            <aside>
+                <h1><a href="#" target="_blank">Car <span style="color: red">Animation</span></a></h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur fuga ipsa iusto nam odio
+                    optio quisquam repellat saepe voluptatem. Dignissimos facilis impedit laboriosam nobis qui quia
+                    repellendus tenetur totam, velit?</p>
+            </aside>
+        </div>
+
+        <div>
+            <aside>
+                <a href="#" target="_blank"><img alt="Logo" src="assets/portfolio/project example img.png"></a>
+            </aside>
+            <aside>
+                <h1><a href="#" target="_blank">Car <span style="color: red">Animation</span></a></h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur fuga ipsa iusto nam odio
+                    optio quisquam repellat saepe voluptatem. Dignissimos facilis impedit laboriosam nobis qui quia
+                    repellendus tenetur totam, velit?</p>
+            </aside>
+        </div>
     </section>
 </main>
 
+
+</body>
 <footer>
     <h1 style="font-family: 'Chakra Petch', sans-serif">K.T</h1>
     <h3>Kavindu Thiwanka</h3>
@@ -85,5 +302,4 @@
         <a href="https://github.com/kavindu1thiwanka" target="_blank"><i class="fab fa-github"></i></a>
     </div>
 </footer>
-</body>
 </html>
