--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta name="viewport" content="width=device-width initial-scale=1">
     <meta name="keyword" content="Kavindu Thiwanka,Kavindu thiwanka,kavindu thiwanka,Kavidu,Kavindu,Kavidu Thiwanka">
 
+    <link href="assets/css/normalize.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/fonts/css/all.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
