--- a/assignments/js/Calculator/Calculator.html
+++ b/assignments/js/Calculator/Calculator.html
@@ -7,7 +7,7 @@
     <style>
 
         body {
-            background: #b1b1b1;
+            background: rgba(0, 0, 0, 0.13);
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
