--- a/index.html
+++ b/index.html
@@ -1529,10 +1529,10 @@
         </div>
         <div>
             <aside>
-                <img src="assets/portfolio/Car Animation Project.gif" alt="Logo">
+                <img src="assets/portfolio/cal.png" alt="Logo">
             </aside>
             <aside>
-                <h1>Car Animation Project</h1>
+                <h1>Calculator Project</h1>
                 <h5>Details about Project</h5>
                 <br>
                 <br>
@@ -1605,7 +1605,18 @@
         <h1>PROJECTS</h1>
         <hr>
         <section>
-            <div id="latest_project">
+            <div>
+                <aside id="latest_project">
+                    <a href="assignments/js/Calculator/Calculator.html" target="_blank"><img alt="Logo" src="assets/portfolio/cal.png"></a>
+                </aside>
+                <aside>
+                    <h1><a href="assignments/js/Calculator/Calculator.html" target="_blank">Calculator <span style="color: red">Project</span></a></h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur fuga ipsa iusto nam odio
+                        optio quisquam repellat saepe voluptatem. Dignissimos facilis impedit laboriosam nobis qui quia
+                        repellendus tenetur totam, velit?</p>
+                </aside>
+            </div>
+            <div>
                 <aside>
                     <a href="assignments/css/Animation/Case 04/case_04.html" target="_blank"><img src="assets/portfolio/Car Animation Project.gif" alt="Logo"></a>
                 </aside>
@@ -1622,17 +1633,6 @@
                 </aside>
                 <aside>
                     <h1><a href="assignments/css/Animation/Case 03/case_03.html" target="_blank">Image Slider <span style="color: red">Animations</span></a></h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur fuga ipsa iusto nam odio
-                        optio quisquam repellat saepe voluptatem. Dignissimos facilis impedit laboriosam nobis qui quia
-                        repellendus tenetur totam, velit?</p>
-                </aside>
-            </div>
-            <div>
-                <aside>
-                    <a href="assignments/css/Animation/Case 02/case_02.html" target="_blank"><img src="assets/portfolio/WATER DROP Project.gif" alt="Logo"></a>
-                </aside>
-                <aside>
-                    <h1><a href="assignments/css/Animation/Case 02/case_02.html" target="_blank">Water Drop <span style="color: red">Animation</span></a></h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur fuga ipsa iusto nam odio
                         optio quisquam repellat saepe voluptatem. Dignissimos facilis impedit laboriosam nobis qui quia
                         repellendus tenetur totam, velit?</p>
