--- a/project.html
+++ b/project.html
@@ -193,10 +193,10 @@
 
         <div>
             <aside>
-                <a href="assignments/js/Calculator/Calculator.html" target="_blank"><img alt="Logo" src="assets/portfolio/project example img.png"></a>
+                <a href="assignments/js/Calculator/Calculator.html" target="_blank"><img alt="Logo" src="assets/portfolio/cal.png"></a>
             </aside>
             <aside>
-                <h1><a href="assignments/js/Calculator/Calculator.html" target="_blank">Calculator</a></h1>
+                <h1><a href="assignments/js/Calculator/Calculator.html" target="_blank">Calculator <span style="color: red">Project</span></a></h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur fuga ipsa iusto nam odio
                     optio quisquam repellat saepe voluptatem. Dignissimos facilis impedit laboriosam nobis qui quia
                     repellendus tenetur totam, velit?</p>
